2005-04-25  James Turner  <james@worldforge.org>

    * Eris/TypeInfo.cpp: fix 'processTypeData' to not add existing children
      to the unresolved set. Thanks to Erik again, he rocks.

    * Eris/TypeService.cpp: make the type verifier more tolerant of wonky
      objects (eg with parents unset but a valid objtype); warn instead of
      throwing.

2005-04-24  James Turner  <james@worldforge.org>

    * Eris/TypeInfo.cpp: in ::resolveChildren, copy the unresolved children
      set before iterating over it, since ::addChild() updates the set. Thanks
      to Erik for the catch.

2005-04-18  Al Riddoch  <alriddoch@zepler.org>

	* Release 1.3.4, Interface version 3.

2005-04-18  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Increment interface version correctly.

2005-04-17  James Turner  <james@worldforge.org>

	* Eris/Account.cpp: re-order code in loginError so loadtool works -
	  re-set status before emitting the signal, so slots which call login /
	  createAccount work as expected.
	 
	* Eris/Entity.cpp, Eris/Avatar.h, Eris/Avatar.cpp: make the Heard signal
	  on Avatar work.

2005-04-17  James Turner  <james@worldforge.org>

	* Eris/Entity.cpp, Eris/Entity.h, Eris/EntityRouter.cpp: make onAction /
	  Acted pass the full Atlas::Objects::Operation::Action, instead of just
	  it's arg.
	  
	* Eris/Connection.cpp: remove debug output.
	  
	* test/tests.cpp: add test of basic location change and sight of an
	  action.

2005-04-15  Al Riddoch  <alriddoch@zepler.org>

	* Eris/Factory.cpp, Eris/Factory.h, Eris/Response.cpp, Eris/Response.h,
	  Eris/Router.cpp, Eris/Router.h: Add virtual destructors to classes
	  that need them.

2005-04-15  James Turner  <james@worldforge.org>

    * test/tests.cpp, tests/commander.cpp, tests/controller.cpp: add tests for 
      sight of move ops, and fix bugs in handling of move ops by the stub
      server.
      
    * Eris/IGRouter.cpp, Eris/View.cpp, Eris/Entity.cpp, Eris/Connection.cpp: