@@ -2,6 +2,7 @@
 #define ERIS_VIEW_H
 
 #include <Eris/Types.h>
+#include <Eris/Factory.h>
 #include <Atlas/Objects/ObjectsFwd.h>
 #include <sigc++/object.h>
 #include <sigc++/signal.h>
@@ -47,6 +48,11 @@ public:
     levels for disappeared entities.
     */
     void update();
+
+    /**
+    Register an Entity Factory with this view
+    */
+    void registerFactory(Factory*);
 
     /** emitted whenever the View creates a new Entity instance. This signal
     is emitted once the entity has been fully bound into the View */
@@ -96,6 +102,8 @@ private:
     /** helper to update the top-level entity, fire signals, etc */
     void setTopLevelEntity(Entity* newTopLevel);
 
+    Entity* createEntity(const Atlas::Objects::Entity::GameEntity&);
+
     typedef std::map<std::string, Entity*> IdEntityMap;
 
     Avatar* m_owner;
@@ -122,6 +130,18 @@ private:
     /** all the entities in the view which are moving, so they can be
     motion predicted. */
     EntitySet m_moving;
+    
+    class FactoryOrdering
+    {
+    public:
+        bool operator()(Factory* a, Factory* b) const
+        {   // higher priority factories are placed nearer the start
+            return a->priority() > b->priority();
+        }
+    };
+    
+    typedef std::multiset<Factory*, FactoryOrdering> FactoryStore;
+    FactoryStore m_factories;
 };
 
 } // of namespace Eris
