@@ -24,10 +24,7 @@ login to bad account / bad password
  ditto for emotes
  
  private chat, check it's okay
- 
- check typeinfo lookup, and registration
- check bad type response
- 
+
 ------------------------
  
  
