@@ -573,6 +573,7 @@ void testSet(Controller& ctl)
         
     assert(table->getPosition() == WFMath::Point<3>(1.0, 2.0, 3.0));
     assert(table->numContained() == 1);
+    assert(table->getName() == "George");
     
     ctl.setAttr("_table_1", "status", "funky");
     
@@ -582,6 +583,7 @@ void testSet(Controller& ctl)
     assert(at.newValue() == std::string("funky"));
     // check the value made it through
     assert(table->valueOfAttr("status") == std::string("funky"));
+    assert(table->getName() == "George");
     
     // and that nothing else got bent
     assert(table->getPosition() == WFMath::Point<3>(1.0, 2.0, 3.0));
